force-app/main/default/objects/Quote__c/fields/Amenities_charge1__c.field-meta.xml
<CustomField>
    <fullName>Amenities_charge1__c</fullName>
    <formula>Unit__r.amenities_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amenities charge1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>