force-app/main/default/objects/Quote__c/fields/amenities_charges__c.field-meta.xml
<CustomField>
    <fullName>amenities_charges__c</fullName>
    <inlineHelpText>Piped Gas+Garbage Chute+wifi Provision +DTH Provision+ Smart Intelligent Security System</inlineHelpText>
    <label>amenities charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>