force-app/main/default/objects/Quote__c/fields/At_the_time_of_registration__c.field-meta.xml
<CustomField>
    <fullName>At_the_time_of_registration__c</fullName>
    <formula>TEXT( GRAND_TOTAL__c *Percentage__c*0.75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>At the time of registration</label>
    <type>Text</type>
</CustomField>