force-app/main/default/objects/Quote__c/fields/Backed_Percent__c.field-meta.xml
<CustomField>
    <fullName>Backed_Percent__c</fullName>
    <formula>IF(Total_Basic_Cost1__c &lt;= 4500000, 1,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backed Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>