force-app/main/default/objects/Quote__c/fields/Basic_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost1__c</fullName>
    <label>Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>