force-app/main/default/objects/Quote__c/fields/Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost__c</fullName>
    <formula>(Built_up_area__c * (Rate_per_sqft__c + Scheme_Amount__c + Floor_Raise__c + PLC__c - CP_Discount__c - Discount__c)) + Terrace_Area_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>