force-app/main/default/objects/Quote__c/fields/Basic_Cost_for_Plot_land_Area_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost_for_Plot_land_Area_TEXT__c</fullName>
    <formula>TEXT(Basic_Cost_for_Plot_land_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost for Plot land Area(TEXT)</label>
    <type>Text</type>
</CustomField>