force-app/main/default/objects/Quote__c/fields/Basic_Cost_for_Super__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost_for_Super__c</fullName>
    <formula>Unit__r.Basic_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost for Super Built Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>