force-app/main/default/objects/Quote__c/fields/Basic_Cost_for_Super_Built_Area_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost_for_Super_Built_Area_TEXT__c</fullName>
    <formula>TEXT( Basic_Cost_for_Super__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost for Super Built Area(TEXT)</label>
    <type>Text</type>
</CustomField>