force-app/main/default/objects/Quote__c/fields/Basic_cost_with_CP__c.field-meta.xml
<CustomField>
    <fullName>Basic_cost_with_CP__c</fullName>
    <formula>Basic_price_with_cp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic cost with CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>