force-app/main/default/objects/Quote__c/fields/Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Basic Price Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>