force-app/main/default/objects/Quote__c/fields/Basic_price_with_cp__c.field-meta.xml
<CustomField>
    <fullName>Basic_price_with_cp__c</fullName>
    <label>Basic price with cp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>