force-app/main/default/objects/Quote__c/fields/Before_agreement_execution__c.field-meta.xml
<CustomField>
    <fullName>Before_agreement_execution__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c *0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before agreement execution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>