force-app/main/default/objects/Quote__c/fields/BHK_Type__c.field-meta.xml
<CustomField>
    <fullName>BHK_Type__c</fullName>
    <formula>TEXT(Unit__r.BHK_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BHK Type</label>
    <type>Text</type>
</CustomField>