force-app/main/default/objects/Quote__c/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <formula>Unit__r.Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>