force-app/main/default/objects/Quote__c/fields/Booking_AmountNew__c.field-meta.xml
<CustomField>
    <fullName>Booking_AmountNew__c</fullName>
    <label>Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>