force-app/main/default/objects/Quote__c/fields/Car_Scooter_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Scooter_Parking__c</fullName>
    <label>Car/Scooter Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>