force-app/main/default/objects/Quote__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <formula>Unit__r.Carpet_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>