force-app/main/default/objects/Quote__c/fields/CGST_in1__c.field-meta.xml
<CustomField>
    <fullName>CGST_in1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CGST in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>