force-app/main/default/objects/Quote__c/fields/CGST_in__c.field-meta.xml
<CustomField>
    <fullName>CGST_in__c</fullName>
    <formula>Unit__r.CGST_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>