force-app/main/default/objects/Quote__c/fields/Clubhouse_Charges1__c.field-meta.xml
<CustomField>
    <fullName>Clubhouse_Charges1__c</fullName>
    <formula>Unit__r.Clubhouse_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clubhouse Charges1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>