force-app/main/default/objects/Quote__c/fields/CMWSSB_TNEB_and_other_Charges1__c.field-meta.xml
<CustomField>
    <fullName>CMWSSB_TNEB_and_other_Charges1__c</fullName>
    <formula>Unit__r.TNEB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMWSSB / TNEB and other Charges1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>