force-app/main/default/objects/Quote__c/fields/CMWSSB_TNEB_and_other_Charges__c.field-meta.xml
<CustomField>
    <fullName>CMWSSB_TNEB_and_other_Charges__c</fullName>
    <label>CMWSSB / TNEB and other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>