force-app/main/default/objects/Quote__c/fields/CP_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Approval_Status__c</fullName>
    <label>CP Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>