force-app/main/default/objects/Quote__c/fields/CP_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>CP_Discount_Amount__c</fullName>
    <formula>CP_Discount__c *  Built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>