force-app/main/default/objects/Quote__c/fields/Final_Rate_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Final_Rate_Per_Sqft__c</fullName>
    <formula>Rate_per_sqft__c + Scheme_Amount__c - Discount__c + PLC__c + Floor_Raise__c - CP_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rate Per Sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>