force-app/main/default/objects/Quote__c/fields/Fixed_Basic_Price_With_CP__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Basic_Price_With_CP__c</fullName>
    <label>Fixed Basic Price With CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>