force-app/main/default/objects/Quote__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <formula>TEXT(Unit__r.Floor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor</label>
    <type>Text</type>
</CustomField>