force-app/main/default/objects/Quote__c/fields/Floor_Raise__c.field-meta.xml
<CustomField>
    <fullName>Floor_Raise__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Floor Raise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>