force-app/main/default/objects/Quote__c/fields/Floor_Rise_Charges_from_6th_Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges_from_6th_Floor__c</fullName>
    <formula>Unit__r.Floor_Rise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charges from 6th Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>