force-app/main/default/objects/Quote__c/fields/GRAND_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>GRAND_TOTAL__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c + Total_E__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRAND TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>