force-app/main/default/objects/Quote__c/fields/Grand_Total_Amount_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Amount_With_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grand Total Amount With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>