force-app/main/default/objects/Quote__c/fields/Grand_Total_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_TEXT__c</fullName>
    <formula>TEXT( GRAND_TOTAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total(TEXT)</label>
    <type>Text</type>
</CustomField>