force-app/main/default/objects/Quote__c/fields/Grand_Total_with_5_GST__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_with_5_GST__c</fullName>
    <formula>GRAND_TOTAL__c + (GRAND_TOTAL__c * 0.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total with 5% GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>