force-app/main/default/objects/Quote__c/fields/GST_5__c.field-meta.xml
<CustomField>
    <fullName>GST_5__c</fullName>
    <formula>Total_Basic_Cost1__c  * GST1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>