force-app/main/default/objects/Quote__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>Unit__r.GST1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>