force-app/main/default/objects/Quote__c/fields/GSTBCN__c.field-meta.xml
<CustomField>
    <fullName>GSTBCN__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTBCN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>