force-app/main/default/objects/Quote__c/fields/Guideline_Value1__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Value1__c</fullName>
    <formula>Unit__r.Guideline_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guideline Value1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>