force-app/main/default/objects/Quote__c/fields/Infrastructure_Charges_per_sqft1__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Charges_per_sqft1__c</fullName>
    <formula>Unit__r.Infrastructure_Charges_per_sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infrastructure Charges per sqft1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>