force-app/main/default/objects/Quote__c/fields/Initial_Booking_Amount_and_Balance_Booki__c.field-meta.xml
<CustomField>
    <fullName>Initial_Booking_Amount_and_Balance_Booki__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Booking Amount and Balance Booki</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>