force-app/main/default/objects/Quote__c/fields/Lab_Cess__c.field-meta.xml
<CustomField>
    <fullName>Lab_Cess__c</fullName>
    <formula>IF(ISPICKVAL(Property_Type__c,&apos;Villa&apos;),0,0/*(Total_Basic_Cost__c  * 0.7)/100*/)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Cess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>