force-app/main/default/objects/Quote__c/fields/Landmark_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Landmark_Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>