force-app/main/default/objects/Quote__c/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <formula>SLead__r.Sub_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Sub Source</label>
    <type>Text</type>
</CustomField>