force-app/main/default/objects/Quote__c/fields/Legal_Documentation_Charges1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Documentation_Charges1__c</fullName>
    <formula>Unit__r.Legal_Documentation_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal &amp; Documentation Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>