force-app/main/default/objects/Quote__c/fields/Max_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Limit__c</fullName>
    <formula>Block__r.Discount_Rate_per_sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Discount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>