force-app/main/default/objects/Quote__c/fields/On_completion_of_flooring__c.field-meta.xml
<CustomField>
    <fullName>On_completion_of_flooring__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c*0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On completion of flooring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>