force-app/main/default/objects/Quote__c/fields/On_completion_of_plinth_works__c.field-meta.xml
<CustomField>
    <fullName>On_completion_of_plinth_works__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c*0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On completion of plinth works</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>