force-app/main/default/objects/Quote__c/fields/On_Construction_Agreement__c.field-meta.xml
<CustomField>
    <fullName>On_Construction_Agreement__c</fullName>
    <formula>TEXT( GRAND_TOTAL__c * (1-Percentage__c)* 0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Construction Agreement</label>
    <type>Text</type>
</CustomField>