force-app/main/default/objects/Quote__c/fields/On_offer_of_possession__c.field-meta.xml
<CustomField>
    <fullName>On_offer_of_possession__c</fullName>
    <formula>Total_Consideration_with_taxes_and_other__c*0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On offer of possession</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>