force-app/main/default/objects/Quote__c/fields/On_Sale_Agreement_within_15_days__c.field-meta.xml
<CustomField>
    <fullName>On_Sale_Agreement_within_15_days__c</fullName>
    <formula>TEXT( GRAND_TOTAL__c * Percentage__c*0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Sale Agreement (within 15 days )</label>
    <type>Text</type>
</CustomField>