force-app/main/default/objects/Quote__c/fields/Payment_Schedule_Percent_for_const__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Percent_for_const__c</fullName>
    <formula>TEXT( (100-(Percentage__c*100)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Schedule Percent for const.</label>
    <type>Text</type>
</CustomField>