force-app/main/default/objects/Quote__c/fields/Payment_Schedule_Percent_for_Plot_Dev__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Percent_for_Plot_Dev__c</fullName>
    <formula>TEXT( Percentage__c*100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Schedule Percent for Plot &amp; Dev</label>
    <type>Text</type>
</CustomField>