force-app/main/default/objects/Quote__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>As on stage</fullName>
                <isActive>false</isActive>
                <label>As on stage</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Differed</fullName>
                <isActive>false</isActive>
                <label>Differed</label>
            </value>
            <value>
                <fullName>Full Payment</fullName>
                <isActive>false</isActive>
                <label>Full Payment</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>