force-app/main/default/objects/Quote__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <formula>IF( ISPICKVAL( Payment_Type__c ,&apos;Standard&apos;) , 0.6,  Payment_Schedule_for_Plot_Development__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>