force-app/main/default/objects/Quote__c/fields/Piped_Gas__c.field-meta.xml
<CustomField>
    <fullName>Piped_Gas__c</fullName>
    <formula>Unit__r.Piped_Gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piped Gas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>