force-app/main/default/objects/Quote__c/fields/PLC__c.field-meta.xml
<CustomField>
    <fullName>PLC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PLC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>