force-app/main/default/objects/Quote__c/fields/Plot_Type__c.field-meta.xml
<CustomField>
    <fullName>Plot_Type__c</fullName>
    <label>Plot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nirvana</fullName>
            </value>
            <value>
                <fullName>Zion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>