force-app/main/default/objects/Quote__c/fields/Premium_Location_Charge_10__c.field-meta.xml
<CustomField>
    <fullName>Premium_Location_Charge_10__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Location Charge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>