force-app/main/default/objects/Quote__c/fields/Project_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Project_Checkbox__c</fullName>
    <formula>IF( TEXT(Project__c) ==  TEXT(Lead__r.Allocated_Project__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Checkbox</label>
    <type>Checkbox</type>
</CustomField>