force-app/main/default/objects/Quote__c/fields/Rate_per_sqft_Temp__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sqft_Temp__c</fullName>
    <label>Rate per sqft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7200</fullName>
            </value>
            <value>
                <fullName>7499</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>